--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,9 @@
             app:popExitAnim="@android:anim/fade_out" />
         <action
             android:id="@+id/action_homeFragment_to_writeBottomSheetFragment"
-            app:destination="@id/writeBottomSheetFragment" />
+            app:destination="@id/writeBottomSheetFragment">
+        </action>
+
     </fragment>
     <fragment
         android:id="@+id/haruListFragment"
@@ -45,9 +47,22 @@
         android:label="fragment_haru_worry"
         tools:layout="@layout/fragment_haru_worry" />
 
-    <dialog
+    <fragment
         android:id="@+id/writeBottomSheetFragment"
         android:name="com.colddelight.haru_question.WriteBottomSheetFragment"
         android:label="fragment_write_bottom_sheet"
-        tools:layout="@layout/fragment_write_bottom_sheet" />
+        tools:layout="@layout/fragment_write_bottom_sheet" >
+        <argument
+            android:name="quote"
+            app:argType="string" />
+        <argument
+            android:name="question"
+            app:argType="string" />
+        <argument
+            android:name="questionId"
+            app:argType="integer" />
+        <argument
+            android:name="author"
+            app:argType="string" />
+    </fragment>
 </navigation>
