--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,11 +69,11 @@
                 android:layout_marginEnd="16dp"
                 android:background="@color/beige_100"
                 android:backgroundTint="@color/beige_100"
-                app:layout_constraintBottom_toBottomOf="@+id/textView7"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_home_date"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/textView7"
-                app:layout_constraintTop_toTopOf="@+id/textView7" />
+                app:layout_constraintStart_toEndOf="@+id/tv_home_date"
+                app:layout_constraintTop_toTopOf="@+id/tv_home_date" />
 
             <View
                 android:id="@+id/view5"
@@ -83,10 +83,10 @@
                 android:layout_marginEnd="8dp"
                 android:background="@color/beige_100"
                 android:backgroundTint="@color/beige_100"
-                app:layout_constraintBottom_toBottomOf="@+id/textView7"
-                app:layout_constraintEnd_toStartOf="@+id/textView7"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_home_date"
+                app:layout_constraintEnd_toStartOf="@+id/tv_home_date"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textView7" />
+                app:layout_constraintTop_toTopOf="@+id/tv_home_date" />
 
             <View
                 android:id="@+id/view2"
@@ -105,12 +105,14 @@
                 android:id="@+id/btn_to_write"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
                 android:layout_marginBottom="16dp"
-                android:backgroundTint="@color/gold_200"
+                android:background="@drawable/selector_btn"
+                android:enabled="false"
                 android:text="답변하기"
                 android:textColor="@color/white"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -152,7 +154,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/tv_home_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
