--- a/app/src/main/res/layout/fragment_write_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_write_bottom_sheet.xml
@@ -178,9 +178,11 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:backgroundTint="@color/gold_100"
+            android:background="@drawable/selector_btn"
+            android:enabled="false"
             android:text="완료"
             android:textColor="@color/white"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
