--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -194,6 +194,24 @@
                 app:layout_constraintStart_toEndOf="@+id/tv_home_no"
                 app:layout_constraintTop_toTopOf="@+id/tv_home_no" />
 
+            <TextView
+                android:id="@+id/tv_home_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_abled"
+                android:padding="14dp"
+                android:text="종료하려면 한번 더 누르세요"
+                android:textColor="@color/beige_100"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.3" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
